/*
 * Copyright 2025 Zeppelin Bend Pty Ltd
 *
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at https://mozilla.org/MPL/2.0/.
 */

syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.zepben.protobuf.cim.extensions.iec61970.base.feeder";
package zepben.protobuf.cim.extensions.iec61970.base.feeder;

import "zepben/protobuf/cim/iec61970/base/core/EquipmentContainer.proto";

/**
 * [ZBEX] A collection of equipment for purposes other than generation or utilization, through which electric energy in bulk is passed for the distribution of energy to low voltage network.
 */
message LvSubstation {

    /**
     * The EquipmentContainer fields for this LvSubstation.
     */
    cim.iec61970.base.core.EquipmentContainer ec = 1;

    /**
     * [ZBEX] The Feeders that nominally energize the substation. Also used for naming purposes.
     */
    repeated string normalEnergizingFeederMRIDs = 2;

    /**
     * [ZBEX] The LvFeeders that are nominally energized by this LvSubstation. Also used for naming purposes.
     */
    repeated string normalEnergizedLvFeederMRIDs = 3;

    /**
     * [ZBEX] The Feeders that currently energize the substation. Also used for naming purposes.
     */
    repeated string currentlyEnergizingFeederMRIDs = 4;

}
