/*
 * Copyright 2020 Zeppelin Bend Pty Ltd
 *
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at https://mozilla.org/MPL/2.0/.
 */

syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.zepben.protobuf.cim.iec61968.assetinfo";
package zepben.protobuf.cim.iec61968.assetinfo;

import "zepben/protobuf/cim/iec61968/assetinfo/WireMaterialKind.proto";
import "zepben/protobuf/cim/iec61968/assets/AssetInfo.proto";

/**
 * Wire data that can be specified per line segment phase, or for the line segment as a whole in case its phases all
 * have the same wire characteristics.
 */
message WireInfo {

    /**
     * AssetInfo fields for this WireInfo
     */
    assets.AssetInfo ai = 1;

    /**
     * Current carrying capacity of the wire under stated thermal conditions.
     */
    int32 ratedCurrent = 2;

    /**
     * Conductor material.
     */
    WireMaterialKind material = 3;

}
